# YTBP

./: .gitmodules  CMakeLists.txt  README.md  bp_number  bpgroup  eosio_build.sh  testnet.template  yta_boot.sh  yttboot.txt
Docker/: Dockerfile
Docker/dev/: Dockerfile
contracts/: CMakeLists.txt
contracts/channel.sys/: CMakeLists.txt  channel.sys.abi  channel.sys.cpp  channel.sys.hpp
contracts/eosio.system/: CMakeLists.txt  delegate_bandwidth.cpp  eosio.system.abi  eosio.system.cpp  eosio.system.hpp  producer_pay.cpp  voting.cpp
contracts/eosio.system_bak/: delegate_bandwidth.cpp  eosio.system.abi  eosio.system.cpp  eosio.system.hpp  voting.cpp
contracts/eosio.system_dev/: CMakeLists.txt  delegate_bandwidth.cpp  eosio.system.abi  eosio.system.hpp  eosio.system_dev.cpp  voting.cpp
contracts/eosio.token/: eosio.token.abi  eosio.token.cpp  eosio.token.hpp
contracts/hdddata/: CMakeLists.txt  hdddata.abi  hdddata.cpp  hdddata.hpp
contracts/hdddeposit/: CMakeLists.txt  hdddeposit.abi  hdddeposit.cpp  hdddeposit.hpp  mdeposit.cpp  nmdeposit.cpp
contracts/hddlock/: CMakeLists.txt  hddlock.abi  hddlock.cpp  hddlock.hpp
contracts/hddofficial/: CMakeLists.txt  LICENSE  README.md  (+3 more)
plugins/: CMakeLists.txt
plugins/kafka_plugin/: CMakeLists.txt  README.md  kafka_plugin.cpp  kafka_producer.cpp
plugins/kafka_plugin/include/eosio/kafka_plugin/: kafka_plugin.hpp  kafka_producer.hpp  kafka_types.hpp
scripts/: eosio_build_amazon.sh  eosio_build_centos.sh  eosio_build_darwin.sh  eosio_build_fedora.sh  eosio_build_ubuntu.sh
tests/: Node.py  get_table_tests.cpp
(+12 files in other folders)
